nginx_behind_metalLB/rancher-demo/rancher-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
  labels:
    app.kubernetes.io/name: rancher-demo
    app.kubernetes.io/part-of: rancher-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demo
      app.kubernetes.io/part-of: rancher-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demo
        app.kubernetes.io/part-of: rancher-demo
    spec:
      containers:
      - name: rancher-demo
        image: monachus/rancher-demo
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.1"
            memory: 32Mi
