nginx_behind_metalLB/rancher-demo/rancher-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rancher-demo
    app.kubernetes.io/part-of: rancher-demo
  name: rancher-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: rancher-demo
  sessionAffinity: None
  type: ClusterIP
