nginx_behind_metalLB/rancher-demo/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: rancher-demo
            servicePort: 80
